# Rust_Data_Collector

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md  readme_new.md
influx_docker/: docker-compose.yml
scripts/: build.sh  run.sh
src/: api.rs  health.rs  influx.rs  main.rs  stock.rs  weather.rs
