[package]
name = "dollar-brl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest    = { version = "0.12", features = ["json"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hyper      = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"